# VerFI

VerFI_for_attack/example1/: Library.txt  Makefile  README.md  _export_minimal_testdir.sh  experiments.sh  sim.txt
VerFI_for_attack/example1/PRESENT_cipher/: Makefile  README.md  patch_design.v  preprocess1.sh  x_compile.tcl
VerFI_for_attack/example1/PRESENT_cipher/rtl/verilog/: key_update.v  present_encryptor_top.v  present_encryptor_top_cm.v  sbox.v  sub_per.v  substitution.v
VerFI_for_attack/example1/PRESENT_cipher/scripts/: cm_compile.tcl  o_compile.tcl
VerFI_for_attack/example1/PRESENT_cipher/tb/: testbench.v
VerFI_for_attack/example1/analysis_/: cm_  ct_distrib.py  o_
VerFI_for_attack/example1/cm_/: sim1.txt
VerFI_for_attack/example1/o_/: sim1.txt
VerFI_for_attack/source/: CMakeLists.txt  Definitions.h  Makefile  PrintCheckTools.h  ReadCellReportFile.cpp  ReadCellReportFile.h  ReadDesignFile.cpp  ReadDesignFile.h  ReadLibraryFile.cpp  ReadLibraryFile.h  ReadSimulationFile.h  SimulationTools.cpp  SimulationTools.h  Util.cpp  Util.h  VerFI.cpp  build.sh
